--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -392,7 +392,7 @@ ClientGUI.openUnitListFileDialog.noReinforceTitle=Must have a team assigned!
 ClientGUI.openUnitListFileDialog.noReinforceMessage=Players must have an assigned team in order to reinforce units!\nObservers may join a team using the /joinTeam command.\nFor more information, use /help joinTeam.
 ClientGUI.openUnitListFileDialog.title=Open Unit List File
 ClientGUI.saveUnitListFileDialog.title=Save Unit List As
-ClientGUI.SaveUnitsDialog.message=Do you want to save all surviving units\n(including retreated units) to a file?
+ClientGUI.SaveUnitsDialog.message=Do you want to save a record of all units\n(including salvage) to a file?
 ClientGUI.SaveUnitsDialog.title=Save Units?
 ClientGUI.selectMenuItem=Select 
 ClientGUI.skinningHelpPath=docs/help/en/skinning/skinningHowTo.html
