--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -4,6 +4,8 @@ v0.41.8-dev (SVN)
 + Bug: EjectedCrew entities not getting pilot processed in by MulParser
 + Bug: Key binds will now function when parsing defaultKeyBinds.xml fails
 + Mul files created at end of game now include information about salvage, devastated, and ejected entities
++ MULParser can now read EjectedCrew entities
++ removed separate ejection vector from MULParser
 
 v0.41.7 (2015-08-26 21:30 UTC)
 + Bug [#4544]: Airborne WiGE movement blocked by level 1 buildings
