--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -7,6 +7,8 @@ v0.41.8-dev (SVN)
 + MULParser can now read EjectedCrew entities
 + removed separate ejection vector from MULParser
 + Added kill records to the MUL file
++ improvements to kill reporting in MUL file
++ MUL file puts enemy units that can't escape into the salvage pile
 
 v0.41.7 (2015-08-26 21:30 UTC)
 + Bug [#4544]: Airborne WiGE movement blocked by level 1 buildings
