--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -3,6 +3,7 @@ VERSION HISTORY:
 v0.41.9 (git)
 + Bug: Wind direction was actually wind strength
 + Data: New Sprites
++ Bug [#4619] Mech Icon not displayed in MM and new sprites
 
 v0.41.8 (2015-09-01 12:10 UTC)
 + Bug: EjectedCrew entities not getting pilot processed in by MulParser
