--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -2,6 +2,7 @@ VERSION HISTORY:
 ----------------
 v0.41.9 (git)
 + Bug: Infantry BLK files with true/false for antimek fail to load
++ Bug: Ghost targets option doesn't work without ECCM
 
 v0.41.8 (2015-08-30 16:10 UTC)
 + Bug: EjectedCrew entities not getting pilot processed in by MulParser
