--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -7,6 +7,7 @@ v0.41.9 (git)
 + ExternalIds added to all entities and crews in constructor for better end game tracking
 + Bug: neverDeployed in MULParser defaulting to false when tag is missing
 + Bug: ejected crews are having isEjected set to false on the turn after ejection
++ additional conditions for Entity.canEscape to handle immobilized units and legged/hipped mechs
 
 v0.41.8 (2015-09-01 12:10 UTC)
 + Bug: EjectedCrew entities not getting pilot processed in by MulParser
