--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -9,7 +9,8 @@ v0.41.9 (git)
 + Bug: ejected crews are having isEjected set to false on the turn after ejection
 + additional conditions for Entity.canEscape to handle immobilized units and legged/hipped mechs
 + Bug: some costs reported as -1 when using alternateCost option in MechView 
-+ Added MechWarrior pick up external ID to MUL input/ouput
++ Added MechWarrior pick up external ID to MUL input/output
++ Data: New Sprites
 
 v0.41.8 (2015-09-01 12:10 UTC)
 + Bug: EjectedCrew entities not getting pilot processed in by MulParser
