--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -15,6 +15,7 @@ v0.41.9 (git)
 + Bug: null entities still attempt to be parsed in MULParser
 + Bug: Ghost targets option doesn't work without ECCM
 + Bug [#4623]: Cargo Bay and Bomb Bay missing
++ Bug [#4620]: Bombs attacks for Aeros now computed at the start of every round
 
 v0.41.8 (2015-09-01 12:10 UTC)
 + Bug: EjectedCrew entities not getting pilot processed in by MulParser
