--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,6 +1,7 @@
 VERSION HISTORY:
 ----------------
 v0.41.10 (git)
++ Data: New Sprites and unit file.
 
 v0.41.9 (2014-09-14 01:25 UTC)
 + Bug: Infantry BLK files with true/false for antimek fail to load
