--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -4,6 +4,7 @@ v0.41.10 (git)
 + Data: New Sprites and unit file.
 + only replace pilot external ID in MULParser if not null or zero length
 + Data: New Sprites.
++ Bug [#4627]; Unit with destroyed searchlight still illuminated
 
 v0.41.9 (2014-09-14 01:25 UTC)
 + Bug: Infantry BLK files with true/false for antimek fail to load
