--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -6,6 +6,7 @@ v0.41.10 (git)
 + Data: New Sprites.
 + Bug [#4627]; Unit with destroyed searchlight still illuminated
 + Bug [#4629]: Mech Shield continues to absorb damage after arm is destroyed
++ Bug [#4630]: NatAp:Piloting not always rolling 3D6
 
 
 v0.41.9 (2014-09-14 01:25 UTC)
